<resources>
    <string name="app_name">音乐微协作</string>
    <!--<string name="Connection">http://www.uryuohamusta.tech:8080/api/</string>-->
    <!--<string name="Connection">http://192.168.43.177:8080/api/</string>-->
    <!--<string name="Connection">http://172.19.175.153:8080/api/</string>-->
    <string name="Connection">http://192.168.2.1:8080/api/</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_regist">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Tel/UserName</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">立即注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_TELOREMAIL">用户名必须大于四位</string>
    <string name="error_invalid_password">请输入4-12位字符</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必填项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="icon_user">&#xeade;</string>
    <string name="icon_password">&#xead0;</string>
    <string name="icon_brithday">&#xead8;</string>
    <string name="icon_male">&#xead1;</string>
    <string name="icon_female">&#xeace;</string>
    <string name="icon_nickeName">&#xeacf;</string>
    <string name="icon_signature">&#xead2;</string>
    <string name="icon_del">&#xead4;</string>
    <string name="icon_calender">&#xead3;</string>
    <string name="icon_phone">&#xead9;</string>
    <string name="icon_email">&#xeadf;</string>
    <string name="icon_setting">&#xead6;</string>


    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_ex_regist">ExRegistActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_submitBaseIfo">提交我的个人信息</string>
    <string name="btn_defulBaseIfo">我想以后再填</string>
    <string name="sign_personal_hint">来个我的个性签名吧</string>
    <string name="sponsor">策划</string>
    <string name="signer">歌手</string>
    <string name="lyric">词作</string>
    <string name="compose">曲作</string>
    <string name="arrangement">编曲</string>
    <string name="postProduction">后期</string>
    <string name="artDesigner">美工</string>
    <string name="Wword">题词</string>
    <string name="painter">画师</string>
    <string name="Complete">成功</string>
    <string name="Error">出错</string>
    <string name="Upload">上传</string>
    <string name="regist_welcome">注册社团</string>
    <string name="orginal_textsize">15dp</string>
    <string name="useable">可用</string>
    <string name="isCNUseable">检查社团名</string>


</resources>
